# catanai

./: README.md  pyproject.toml  pyrightconfig.json
catanai/: play.py
catanai/ai/players/: catalina.py
