[project]
name = "catanai"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Buck",email = "maxbuckdeveloper@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catanatron @ git+https://github.com/bcollazo/catanatron.git"
]

[project.scripts]
play = 'catanai.play:main'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
